--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
                 type="text"
                 class="zipcode" 
                 placeholder="ZIP CODE"
-                    ></input>
+                ></input>
 
                 <button
                 type="submit"
                 class="submit"
-                    >SUBMIT
-                </button>
+                >SUBMIT</button>
             </form>
        </div>
        
